# ferrotype

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  non-motion-photos  settings.gradle.kts
src/: auth.rs  cli.rs  dl.rs  main.rs  metadata.rs  metrics.rs  statistics.rs
src/main/kotlin/: AuthService.kt  FileBackedCache.kt  SSDCacheService.kt  main.kt  model.kt  util.kt
src/main/kotlin/dl/: MediaDownloadService.kt  MetadataDownloadService.kt  MetricsService.kt
src/main/resources/: logback.xml
