[package]
name = "ferrotype"
version = "0.1.0"
authors = ["Timothy Andrew <mail@timothyandrew.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
